# sdl_core_v4.0_winceport

./: .gitignore  CMakeLists.txt  COMMITTERS.md  README.md
cmake/Modules/: FindSqlite3.cmake
include/all/: build_target_lib.h
include/win32/openssl/: asn1.h  opensslconf.h
include/wince/: stdint.h
include/wince/openssl/: dtls1.h  opensslconf.h
lib/win32/: libeay32.lib  ssleay32.lib
lib/wince/: libeay32.lib  ssleay32.lib  wcecompat.lib
src/3rd_party-static/: CMakeLists.txt
src/3rd_party-static/MessageBroker/: CMakeLists.txt
src/3rd_party-static/MessageBroker/include/: system.h  (+4 more)
src/3rd_party-static/encryption/: CMakeLists.txt
src/3rd_party-static/gmock-1.7.0/: CMakeLists.txt
src/3rd_party-static/libusbx-1.0.16/: CMakeLists.txt  config.h
src/3rd_party-static/pthread-win32-2.9.1/: pthread_equal.c
src/3rd_party-static/sdk_ext/: CMakeLists.txt
src/3rd_party-static/sdk_ext/include/: errno_ext.h  pipe.h  process.h  stdlib_ext.h  time_ext.h
src/3rd_party-static/sdk_ext/include/sys/: timeb.h
src/3rd_party-static/sdk_ext/src/: ChildData.cpp  args.cpp  args.h  errno_ext.cpp  io.c  pipe.cpp  process.c  redir.cpp  time_ext.c  timeb.cpp  ts_string.cpp
src/3rd_party-static/sqlite3-3.11.1/: CMakeLists.txt
src/3rd_party-static/test/: CMakeLists.txt
src/appMain/: CMakeLists.txt  life_cycle.cc  main.cc  main.h  smartDeviceLink.ini
src/components/application_manager/: CMakeLists.txt
src/components/config_profile/: CMakeLists.txt
src/components/connection_handler/: CMakeLists.txt
src/components/hmi_message_handler/: CMakeLists.txt
src/components/interfaces/: CMakeLists.txt
src/components/media_manager/: CMakeLists.txt
src/components/protocol_handler/: CMakeLists.txt
src/components/resumption/: CMakeLists.txt
src/components/security_manager/: CMakeLists.txt
src/components/smart_objects/: CMakeLists.txt
src/components/telemetry_monitor/: CMakeLists.txt
src/components/transport_manager/: CMakeLists.txt
src/components/utils/: CMakeLists.txt
src/plugins/appenders/: CMakeLists.txt
(+259 files in other folders)
